# TFG-sentimiento-solana

./: LICENSE  README.md  pyproject.toml
data/processed/: final_test.csv  final_train.csv  gdelt_solana_tone_vars.csv  merged_dataset.csv  sol_usd_market_vars.csv  test.csv  train.csv
data/raw/: gdelt_solana_tone.csv  sol_usd_ohlcv.csv
src/: create_market_vars.py  create_tone_vars.py  download_gdelt_data.py  download_market_data.py  healthcheck.py  merge_datasets.py  split_datasets.py  standarize_dataset.py
